test/negative/238_import_did_you_mean.fx
// expect: did you mean
// reform-prep-1: a misspelled stdlib import gets a Levenshtein suggestion drawn
// from the *.fx module files on the include path.
import Strig
println("x")
